# TVAM_Rotary_Control

./: .gitignore  AGENTS.md  AGENT_PROMPT.md  CMakeLists.txt  CODEX_HANDOFF_2026-04-20.md  CONTROL_SOFTWARE_TECH_SPEC.md  HARDWARE_REFERENCE.zh-CN.md  PROJECT_MASTER_PLAN.md  PROJECT_STATUS.md  README.md  README.zh-CN.md
QCOM_V1.6/: Config.ini  TP.ini  pro4710.ini
config/: app_config.ini
docs/: OPERATIONS.zh-CN.md
include/: BoardAdapter.h  CameraService.h  ConfigManager.h  ImageSequenceService.h  LogService.h  MainWindow.h  MotionService.h  ProjectionWindow.h  ProjectorService.h  SyncPlaybackService.h
ref/板卡/: COM_GAS_N_V2.9_extracted.txt
ref/板卡/DemoVC/: DemoVC.sln
ref/板卡/DemoVC/Debug/: DemoVC.ilk  GAS.lib
ref/板卡/DemoVC/DemoVC/: DemoVC.aps  DemoVC.cpp  DemoVC.h  DemoVC.rc  DemoVC.vcxproj  DemoVC.vcxproj.filters  DemoVCDlg.cpp  DemoVCDlg.h  GAS_N.h  ReadMe.txt  resource.h  stdafx.cpp
ref/板卡/DemoVC/DemoVC/Debug/: CL.read.1.tlog  CL.write.1.tlog  DemoVC.lastbuildstate  DemoVC.res  DemoVC_manifest.rc  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
ref/板卡/DemoVC/DemoVC/res/: DemoVC.rc2
ref/板卡/串口调试助手SSCOM/: sscom.ini  sscom51.ini
ref/板卡/板卡常规API接口方式动态库/64位动态库/: GAS.lib
scripts/: package_win_portable.ps1
src/: BoardAdapter.cpp  CameraService.cpp  ConfigManager.cpp  ImageSequenceService.cpp  LogService.cpp  MainWindow.cpp  MotionService.cpp  ProjectionWindow.cpp  ProjectorService.cpp  SyncPlaybackService.cpp  main.cpp
ui/: MainWindow.ui
